feat: entered the array list element in JS

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="contitore">
+
+    </div>
     
 
-    <script type="text7javascript" src="/js/main.js "></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
